--- a/vaApp/Db/Makefile
+++ b/vaApp/Db/Makefile
@@ -23,9 +23,9 @@ DB += gammaspc_controller.template
 DB += gammaspc_ip.template
 DB += gammaspc_setpoint.template
 
-DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.template
-DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.template
-DB_INSTALLS += $(EPICS_BASE)/db/reccaster.template
+DB_INSTALLS += $(EPICS_BASE)/db/iocAdminSoft.db
+DB_INSTALLS += $(EPICS_BASE)/db/save_restoreStatus.db
+DB_INSTALLS += $(EPICS_BASE)/db/reccaster.db
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
