fix error in gammampcq ip

--- a/vaApp/Db/gammampcq_ip.template
+++ b/vaApp/Db/gammampcq_ip.template
@@ -151,7 +151,7 @@ record(mbbi, "$(Sys)$(Dev)Mode:AnalogOut-Sts")
 	field(SVST, "V_PER_10_mA")
 	field(EIST, "V_PER_50_mA")
 	field(NIST, "V_PER_1_nA")
-	field(TNST, "V_PER_10_nA")
+	field(TEST, "V_PER_10_nA")
 	field(ELST, "V_ER_100_nA")
 	field(TVST, "V_PER_1_kV")
 	field(PINI, "YES")
