debug gammampcq setpoint sp

--- a/vaApp/Db/gammampcq_setpoint.template
+++ b/vaApp/Db/gammampcq_setpoint.template
@@ -70,10 +70,10 @@ record(bo, "$(Sys)$(Cntl)Cmd:Rly$(SPNUM)-Cmd")
 record(mbbo, "$(Sys)$(Cntl)Chan:Rly$(SPNUM)-Sel") 
 {
 	field(DESC, "Set SP Chan")
-	field(ZRVL, "1")
-	field(ONVL, "2")
-	field(TWVL, "3")
-	field(THVL, "4")
+	field(ZRST, "1")
+	field(ONST, "2")
+	field(TWST, "3")
+	field(THST, "4")
 	info(autosaveFields_pass0, "VAL")
 }
 
