--- a/vaApp/Db/gammampcq_ip.template
+++ b/vaApp/Db/gammampcq_ip.template
@@ -136,7 +136,7 @@ record(mbbi, "$(Sys)$(Dev)Mode:AnalogOut-Sts")
 	field(DTYP, "stream")
 	field(INP, "@gammampcq-tcp.proto getAnalogOutMode($(CHAN),$(Sys)$(Dev)) $(PORT)")
 # Scan may not need
-	field(SCAN, "10 second")
+#	field(SCAN, "10 second")
 	field(ZRST, "Off")
 	field(ONST, "LOG_P")
 	field(TWST, "LOG_I")
