add enum values for pirg relay enable

--- a/vaApp/Db/mks937b_relay_pirg.template
+++ b/vaApp/Db/mks937b_relay_pirg.template
@@ -150,6 +150,9 @@ record(mbbo, "$(Sys)$(Dev)Enbl:Rly$(SPNUM)-Sel")
 	field(ZRST, "CLEAR")
 	field(ONST, "SET")	
 	field(TWST, "ENABLE")
+	field(ZRVL, "0")
+	field(ONVL, "1")
+	field(TWVL, "2")
 }
 
 # Get the setpoint status
